--- a/Desafios/d012 - segundo projeto/estilo/style.css
+++ b/Desafios/d012 - segundo projeto/estilo/style.css
@@ -54,6 +54,9 @@ section{
     line-height: 2em;
     font-size: 3vw;
 }
+section > p{
+    padding-bottom: 2em;
+}
 section.normal{
     background-color: white;
     color: black;
@@ -61,12 +64,22 @@ section.normal{
 section.imagem{
     background-color: purple;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.377);
 }
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.2);
     padding: 15px;
     border-radius: 10px;
     display: inline-block;
+    text-shadow: 1px 1px 0px black;
+}
+section#img01{
+    background: purple url('../imagens/background001.jpg') right center no-repeat fixed;
+    background-size: cover;
+}
+section#img02{
+    background: purple url('../imagens/background002.jpg') right center no-repeat fixed;
+    background-size: cover;
 }
 footer{
     background-color: black;
