--- a/Projetos pessoais/002/estilo/style.css
+++ b/Projetos pessoais/002/estilo/style.css
@@ -12,25 +12,29 @@ body{
     background-color: peachpuff;
 }
 header{
-    padding-top: 25px;
+    padding: 30px 30px 50px 30px;
     height: 170px;
-    background-image: linear-gradient(to bottom, blue, skyblue);
+    background: blueviolet url('../imagens/espaco.jpg') center bottom no-repeat fixed;
+    background-size: cover;
+    box-shadow: inset 0px -10px 10px rgba(0, 0, 0, 0.399);
 }
 header h1{
-    font-size: 3.5em;
+    font-size: 3.0em;
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 header p{
-    padding: 20px 10px 0px 10px;
+    padding: 20px 10px 10px 10px;
     display: block;
     margin: auto;
     text-align: center;
-    font-size: 1.4em;
+    font-size: 1.2em;
+    font-weight: bold;
     max-width: 500px;
 }
 nav{
-    padding: 15px;
+    display: block;
+    padding: 22px;
     background-color: skyblue;
     text-align: center;
     margin-bottom: 30px;
@@ -39,11 +43,21 @@ nav a{
     text-decoration: none;
     font-weight: bold;
     margin: 0px 15px;
+    transition-duration: 0.5s;
+}
+nav a:hover{
+    background-color: rgba(255, 255, 255, 0.25);
+    font-size: 1.3em;
+    border-radius: 10px;
+    padding: 10px;
+}
+#espaco{
+    padding: 0px 8px;
 }
 main{
     background-color: lightblue;
     max-width: 1000px;
-    padding: 30px;
+    padding: 18px;
     margin: auto;
     border-radius: 15px;
 }
@@ -63,6 +77,7 @@ article{
     background-color: white;
     padding: 20px;
     margin: auto;
+    margin-bottom: 20px;
     max-width: 900px;
     border-radius: 10px;
 }
