--- a/Projetos pessoais/003/estilos/style.css
+++ b/Projetos pessoais/003/estilos/style.css
@@ -29,3 +29,10 @@ main{
     background:url('../imagens/frame-iphone.png') no-repeat scroll;
     background-size: cover;
 }
+#tela{
+    position: relative;
+    top: 83px;
+    left: 23px;
+    width: 265px;
+    height: 468px;
+}
