--- a/Projetos pessoais/003/estilos/style.css
+++ b/Projetos pessoais/003/estilos/style.css
@@ -36,3 +36,19 @@ section#telefone{
     width: 263px;
     height: 467px;
 }
+#redes{
+    text-align: right;
+}
+#redes img{
+    width: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+}
+#redes img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.6);
+    transform: translate(-3px, -3px);
+    transition: transform 0.5s;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.572);
+}
