--- a/Projetos pessoais/004/estilos/style.css
+++ b/Projetos pessoais/004/estilos/style.css
@@ -5,8 +5,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@400;500;700&display=swap');
 
 :root{
-    --fontetitulo: font-family: 'Roboto Mono', monospace;
-    --Fontedestaque: font-family: 'Sofia Sans', sans-serif;
+    --fontetitulo: 'Roboto Mono', monospace;
+    --Fontedestaque: 'Sofia Sans', sans-serif;
 }
 
 *{
@@ -37,6 +37,11 @@ header p{
     margin-top: 20px;
     max-width: 150px;
     text-align: center;
+    font-family: var(--fontetitulo);
+}
+p#nome{
+    max-width: 220px;
+    font-size: 1.35em;
 }
 main{
     background-color: lightblue;
@@ -49,23 +54,28 @@ main a{ /*Centralizando o link*/
     left: 50%;
     transform: translate(-50%, -50%);
 
-    display: inline-block;
+    display: block;
     margin-left: 10px;
-    margin-right: 10px;
-    padding: 20px 150px 20px 150px;
-    max-width: 500px;
+    margin-bottom: 10px;
+    
+    padding: 20px 130px;
+    max-width: 400px;
     background-color: red;
     text-align: center;
     text-decoration: none;
     border-radius: 36px;
     color: white;
-    font-size: 1.2em;
+    font-size: 1.51em;
+    font-family: var(--Fontedestaque);
+}
+a#git{
+    background-color: blue;
 }
 main a img{
     position: absolute;
     top: 50%;
-    left: 10%;
-    transform: translate(-50%, -50%);
+    left: 5%;
+    transform: translate(-10%, -50%);
     width: 40px;
     height: 40px;
     border-radius: 50%;
