--- a/Projetos pessoais/004/estilos/style.css
+++ b/Projetos pessoais/004/estilos/style.css
@@ -105,3 +105,19 @@ main a img{
 main a:hover{
    font-size: 2.3em;
 }
+footer{
+    padding: 8px 5px;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.3em;
+}
+footer a{
+    color: white;
+    text-decoration: none;
+    transition-duration: 0.5s;
+}
+footer a:hover{
+    font-size: 1.3em;
+}
