--- a/Exercicios/Ex023 - Media Query/mq001/estilos/tela.css
+++ b/Exercicios/Ex023 - Media Query/mq001/estilos/tela.css
@@ -1,3 +1,56 @@
 @charset "UTF-8";
 
 /*Estilo para telas*/
+
+*{
+    padding: 0px;
+    margin: 0px;
+}
+html{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.0em;
+}
+header{
+    background-color: lightgray;
+    padding: 10px;
+    margin-bottom: 30px;
+}
+header h1{
+    text-align: center;
+    font-size: 2.3em;
+}
+menu ul{
+    margin-top: 20px;
+    list-style: none;
+    border-radius: 5px;
+    background-color: darkgray;
+    text-align: center;
+    padding: 5px;
+}
+menu li{
+    display: inline-block;
+    margin: 0px 10px;
+    padding: 8px;
+    font-size: 1.3em;
+    font-weight: bold;
+    background-color: rgb(112, 112, 112);
+    color: white;
+    border-radius: 6px;
+}
+article{
+    text-align: justify;
+    display: block;
+    margin: auto;
+    max-width: 600px;
+}
+article h2{
+    padding: 8px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+article p{
+    padding: 15px;
+    text-indent: 30px;
+    font-size: 1.4em;
+    line-height: 1.5em;
+}
