--- a/Exercicios/Ex023 - Media Query/mq002/estilos/style.css
+++ b/Exercicios/Ex023 - Media Query/mq002/estilos/style.css
@@ -1,1 +1,17 @@
 @charset "UTF-8"; /*Configurações gerais do site*/
+
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+}
+h1{
+    color: white;
+    text-shadow: 2px 2px 0px #1526a7;
+    padding: 10px;
+}
