novas mídias aceitas

--- a/Exercicios/Ex023 - Media Query/mq004/estilos/style.css
+++ b/Exercicios/Ex023 - Media Query/mq004/estilos/style.css
@@ -8,17 +8,17 @@
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
 }
-body,html{
-    width: 100vw;
+html{
     height: 100vh;
+    padding: 0px 10px;
 }
 body{
     background: black url('../imagens/back-phone.jpg') no-repeat center center fixed;
     background-size: cover;
 }
 main{
-    background-color: rgba(255, 255, 255, 0.84);
-    width: 90vw;
+    background-color: rgba(255, 255, 255, 0.61);
+    max-width: 400px;
     margin: auto;
     margin-top: 25px;
     border-radius: 10px;
