--- a/Exercicios/Ex023 - Media Query/mq004/estilos/mediaqueries.css
+++ b/Exercicios/Ex023 - Media Query/mq004/estilos/mediaqueries.css
@@ -2,6 +2,61 @@
 
 /*Todas as demais mídias*/
 
-@media print {
-    
+/*Typical device breakpoints
+-----------------------------------
+Pequenas telas: até 600px
+Celular: 600px - 768px
+tablet: 768px - 992px
+desktop: 992px - 1200px
+Grandes telas: acima de 1200px*/
+
+@media print { /*Impressora*/
+   *{
+    font-family: 'Courier New', Courier, monospace;
+   }
+    main{
+        border: 2px solid black;
+    }
+    main h1{
+        text-shadow: none;
+        color: black;
+    }
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{ display: block;}
+    img#tv{display: none;}
+    img#pc{display: none;}
+}
+@media screen  and (min-width:768px) and (max-width: 992px){ /*tablet*/
+    body{
+        background-image: url('../imagens/back-tablet.jpg');
+    }
+    img#phone{display: none;}
+    img#tablet{display: block;}
+    img#print{ display: none;}
+    img#tv{display: none;}
+    img#pc{display: none;}
+}
+@media screen and (min-width: 993px) and (max-width: 1200px) { /*pc*/
+    body{
+        background-image: url('../imagens/back-pc.jpg');
+    }
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{ display: none;}
+    img#tv{display: none;}
+    img#pc{display: block;}
+}
+@media screen and (min-width: 1201px) { /*Grandes telas*/
+    body{
+        background-image: url('../imagens/back-tv.jpg');
+    }
+    main{
+        max-width: 700px;
+    }
+    img#phone{display: none;}
+    img#tablet{display: none;}
+    img#print{ display: none;}
+    img#tv{display: block;}
+    img#pc{display: none;}
 }
