--- a/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
+++ b/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
@@ -1,6 +1,64 @@
 @charset "UTF-8";
 
 *{
-    padding: 0px;
-    margin: 0px;
+   font-family: Arial, Helvetica, sans-serif;
+   padding: 0px;
+   margin: 0px;
+}
+body,html{
+    background-color: lightgray;
+}
+header{
+    background-color: rgb(148, 148, 148);
+    padding-top: 10px;
+}
+header h1{
+    padding: 10px;
+    text-align: center;
+    width: 200px;
+    color: white;
+    text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.479);
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.445);
+    border-radius: 10px;
+}
+menu{
+    display: block;
+    margin-top: 10px;
+}
+menu ul{
+    list-style-type: none;
+}
+menu > ul > li > a{
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    background-color: rgb(87, 87, 87);
+    color: white;
+    text-align: center;
+    border-top: 2px solid grey;
+}
+menu > ul > li > a:hover{
+    background-color: grey;
+}
+main{
+    width: 90vw;
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+article h2{
+    padding-bottom: 15px;
+    font-size: 1.6em;
+    text-align: center;
+}
+article p{
+    text-align: justify;
+    margin-bottom: 20px;
+    font-size: 1.2em;
+    text-indent: 20px;
+    line-height: 1.4em;
 }
