--- a/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
+++ b/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
@@ -11,12 +11,13 @@ body,html{
 header{
     background-color: rgb(148, 148, 148);
     padding-top: 10px;
+    padding-bottom: 10px;
 }
 header h1{
     padding: 10px;
     text-align: center;
     width: 200px;
-    color: white;
+    color: rgb(241, 241, 241);
     text-shadow: 0px 3px 2px rgba(0, 0, 0, 0.479);
     margin: auto;
     background-color: rgba(255, 255, 255, 0.445);
@@ -24,9 +25,23 @@ header h1{
 }
 span#burguer{
     background-color: rgb(48, 48, 48);
+    margin: auto;
+    margin-top: 10px;
+    display: block;
+    max-width: 150px;
+    border-radius: 7px;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+    transition-duration: 0.3s;
+}
+span#burguer:hover{
+    background-color: white;
+    color: rgb(48, 48, 48);
 }
 menu{
-    display: block;
+    display: none;
     margin-top: 10px;
 }
 menu ul{
