--- a/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
+++ b/Exercicios/Ex023 - Media Query/mq005/estilos/style.css
@@ -12,6 +12,7 @@ header{
     background-color: rgb(148, 148, 148);
     padding-top: 10px;
     padding-bottom: 10px;
+    box-shadow: 0px 5px 3px rgba(0, 0, 0, 0.288);
 }
 header h1{
     padding: 10px;
