--- a/Desafios/d015 - login solo/estilos/style.css
+++ b/Desafios/d015 - login solo/estilos/style.css
@@ -1,1 +1,26 @@
 @charset "UTF-8";
+
+*{
+    padding: 0px;
+    margin: 0px;
+}
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(90deg, pink, skyblue);
+}
+section#img{
+    max-width: 380px;
+    height: 300px;
+    margin: -15px -15px 10px -15px;
+    border-radius: 25px 25px 0px 0px;
+    background: red url('../imagens/img01.jpg') no-repeat center center fixed;
+    background-size: cover;
+}
+main{ /*Caixa principal*/
+    background-color: white;
+    border-radius: 25px;
+    max-width: 350px;
+    margin: auto;
+    margin-top: 80px;
+    padding: 15px;
+}
