--- a/Desafios/d015 - login solo/estilos/style.css
+++ b/Desafios/d015 - login solo/estilos/style.css
@@ -7,6 +7,8 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     background-image: linear-gradient(90deg, pink, skyblue);
+    padding-left: 10px;
+    padding-right: 10px;
 }
 section#img{
     max-width: 380px;
@@ -23,4 +25,14 @@ main{ /*Caixa principal*/
     margin: auto;
     margin-top: 80px;
     padding: 15px;
+}
+main h1{
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 15px;
+    font-size: 1.8em;
+}
+main p{
+    line-height: 1.4em;
+    margin-bottom: 15px;
 }
