--- a/Desafios/d015 - login solo/estilos/style.css
+++ b/Desafios/d015 - login solo/estilos/style.css
@@ -44,6 +44,14 @@ p#usu{
     margin-bottom: 5px;
     text-align: right;
 }
+span#user{
+    position: absolute;
+    transform: translate(-60px, 0px);
+    
+    font-size: 2.5em;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.233);
+}
 #iusu{
     padding: 12px;
     font-size: 1.05em;
@@ -55,6 +63,14 @@ p#senha{
     padding: 4px 4px 4px 15px;
     border-radius: 12px;
     text-align: right;
+}
+span#pass{
+    position: absolute;
+    transform: translate(-60px, 0px);
+
+    font-size: 2.5em;
+    color: white;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.233);
 }
 #isenha{
     padding: 12px;
