--- a/Desafios/d015 - login solo/estilos/style.css
+++ b/Desafios/d015 - login solo/estilos/style.css
@@ -9,6 +9,7 @@ body{
     background-image: linear-gradient(90deg, pink, skyblue);
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 25px;
 }
 section#img{
     max-width: 380px;
