--- a/Desafios/d015-v2/estilos/style.css
+++ b/Desafios/d015-v2/estilos/style.css
@@ -5,3 +5,42 @@
     --verde: #49a09d;
     --lilas: #5f2c82;
 }
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    box-sizing: border-box;
+}
+body, html{
+    background-color: var(--lilas);
+    height: 100vh;
+    width: 100vw;
+}
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+section#login{
+    position: absolute; /*Trabalho de centralização da tela de login*/
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.322);
+}
+div#imagem{
+    background: var(--lilas) url('../imagens/img01.jpg') no-repeat right center;
+    background-size: cover;
+    height: 200px;
+    display: block;
+}
+div#formulario{ /*Onde o texto e o form estão localizados*/
+    padding: 10px;
+    display: block;
+}
