--- a/Desafios/d015-v2/estilos/style.css
+++ b/Desafios/d015-v2/estilos/style.css
@@ -33,6 +33,8 @@ section#login{
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.322);
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 div#imagem{
     background: var(--lilas) url('../imagens/img01.jpg') no-repeat right center;
