--- a/Desafios/d015-v2/estilos/style.css
+++ b/Desafios/d015-v2/estilos/style.css
@@ -46,3 +46,10 @@ div#formulario{ /*Onde o texto e o form estão localizados*/
     padding: 10px;
     display: block;
 }
+div#formulario h1{
+    text-align: center;
+    margin-bottom: 10px;
+}
+div#formulario p{
+    font-size: 0.8em;
+}
