--- a/Desafios/d015-v2/estilos/style.css
+++ b/Desafios/d015-v2/estilos/style.css
@@ -29,7 +29,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     overflow: hidden;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.322);
@@ -52,4 +52,46 @@ div#formulario h1{
 }
 div#formulario p{
     font-size: 0.8em;
+}
+form div.campo{
+    background-color: #5f2c82;
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 7px;
+    margin: 5px 0px;
+}
+div.campo > label{
+    display: none;
+}
+form > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--verde);
+    color: white;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+form > input[type=submit]:hover{
+    background-color: #2d6462;
+}
+form a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    padding-top: 3px;
+    border: 1px solid var(--verde);
+    border-radius: 7px;
+    margin-top: 5px;
+    text-decoration: none;
+    color: #2d6462;
+}
+form a.botao:hover{
+    background-color: #6cd3cf;
 }
